--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+/* Position text in the middle of the page/image */
+.bg-text {
+  /* Fallback color */
+  /* background-color: rgb(0,0,0); */
+  /* Black w/opacity/see-through */
+  /* background-color: rgba(0,0,0, 0.4); */
+  color: black;
+  font-weight: bold;
+  /* border: 3px solid #f1f1f1; */
+  position:absolute;
+  top: 67%;
+
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  /* width: 80%;
+  padding: 20px; */
+  text-align: center;
+}
+
