--- a/src/App.css
+++ b/src/App.css
@@ -46,8 +46,8 @@
   color: black;
   font-weight: bold;
   /* border: 3px solid #f1f1f1; */
-  position:absolute;
-  top: 67%;
+  position:relative;
+  top: 94%;
 
   left: 50%;
   transform: translate(-50%, -50%);
@@ -56,4 +56,5 @@
   padding: 20px; */
   text-align: center;
 }
+
 
